geteto-core/src/br/jabuti/language/pascal/Pascal.java
/* Generated By:JavaCC: Do not edit this line. Pascal.java */
public class Pascal implements PascalConstants {
        public static void main (String[] args) {
                Pascal parser;
                String filename = null;
                long initTime = 0;
                long parseTime = 0;
                long startTime = 0;
                long stopTime = 0;
                if (args.length == 1) {
                    filename = args[0];
              System.out.println("Compilador Pascal\nLendo arquivo " + filename);

                        try {
                  parser = new Pascal(new java.io.FileInputStream(filename));
              } catch (java.io.FileNotFoundException e) {
                    System.out.println("Arquivo nao encontrado.");
                        return;
                        }
                } else {
                        System.out.println("Argumento invalido.");
                        System.out.println("Como usar: java Pascal <arquivo>");
                        return;
                }

                try {
                        startTime = System.currentTimeMillis();
                        parser.Programa();
                        stopTime = System.currentTimeMillis();
                        parseTime = stopTime - startTime;
                        System.out.println("Nao foram encontrados erros em " + filename + " (" + parseTime + " ms).");
                } catch (ParseException e) {
                        stopTime = System.currentTimeMillis();
                        parseTime = stopTime - startTime;
                        System.out.println(e.getMessage());
                        System.out.println("Foram encontrados erros em " + filename + " (" + parseTime + " ms).");
                }
        }

  static final public void AcessoVariavel() throws ParseException {
    trace_call("AcessoVariavel");
    try {
      jj_consume_token(IDENTIFICADOR);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABRE_COLCHETE:
        case PONTO:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        if (jj_2_1(2)) {
          jj_consume_token(ABRE_COLCHETE);
          Expressao();
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case VIRGULA:
              ;
              break;
            default:
              jj_la1[1] = jj_gen;
              break label_2;
            }
            jj_consume_token(VIRGULA);
            Expressao();
          }
          jj_consume_token(FECHA_COLCHETE);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PONTO:
            jj_consume_token(PONTO);
            jj_consume_token(IDENTIFICADOR);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("AcessoVariavel");
    }
  }

  static final public void Bloco() throws ParseException {
    trace_call("Bloco");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LABEL:
        DeclaracaoRotulos();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        DefinicaoConstantes();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        DefinicaoTipos();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        DeclaracaoVariaveis();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
        case PROCEDURE:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PROCEDURE:
          DeclaracaoProcedimento();
          break;
        case FUNCTION:
          DeclaracaoFuncao();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(PONTO_VIRGULA);
      }
      ComandoComposto();
    } finally {
      trace_return("Bloco");
    }
  }

  static final public void CabecalhoFuncao() throws ParseException {
    trace_call("CabecalhoFuncao");
    try {
      IdentificadorFuncao();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESE:
        ListaFormalParametro();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(DOIS_PONTOS);
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("CabecalhoFuncao");
    }
  }

  static final public void CabecalhoProcedimento() throws ParseException {
    trace_call("CabecalhoProcedimento");
    try {
      IdentificadorProcedimento();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESE:
        ListaFormalParametro();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } finally {
      trace_return("CabecalhoProcedimento");
    }
  }

  static final public void CabecalhoPrograma() throws ParseException {
    trace_call("CabecalhoPrograma");
    try {
      jj_consume_token(PROGRAM);
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESE:
        jj_consume_token(ABRE_PARENTESE);
        ListaIdentificador();
        jj_consume_token(FECHA_PARENTESE);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
    } finally {
      trace_return("CabecalhoPrograma");
    }
  }

  static final public void ChamadaProcedimento() throws ParseException {
    trace_call("ChamadaProcedimento");
    try {
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
      case PROCEDURE:
      case MAIS:
      case MENOS:
      case ABRE_PARENTESE:
      case IDENTIFICADOR:
      case NUMERO:
      case CARACTER:
        ListaParametro();
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
    } finally {
      trace_return("ChamadaProcedimento");
    }
  }

  static final public void Comando() throws ParseException {
    trace_call("Comando");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ROTULO:
        jj_consume_token(ROTULO);
        jj_consume_token(DOIS_PONTOS);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GOTO:
      case IDENTIFICADOR:
      case 76:
        ComandoSimples();
        break;
      case BEGIN:
      case FOR:
      case IF:
      case REPEAT:
      case WHILE:
      case WITH:
        ComandoEstruturado();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Comando");
    }
  }

  static final public void ComandoAtribuicao() throws ParseException {
    trace_call("ComandoAtribuicao");
    try {
      AcessoVariavel();
      jj_consume_token(ATRIBUICAO);
      Expressao();
    } finally {
      trace_return("ComandoAtribuicao");
    }
  }

  static final public void ComandoComposto() throws ParseException {
    trace_call("ComandoComposto");
    try {
      jj_consume_token(BEGIN);
      SequenciaComando();
      jj_consume_token(END);
    } finally {
      trace_return("ComandoComposto");
    }
  }

  static final public void ComandoEstruturado() throws ParseException {
    trace_call("ComandoEstruturado");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BEGIN:
        ComandoComposto();
        break;
      case IF:
        ComandoIf();
        break;
      case FOR:
      case REPEAT:
      case WHILE:
        ComandoRepetitivo();
        break;
      case WITH:
        ComandoWith();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ComandoEstruturado");
    }
  }

  static final public void ComandoFor() throws ParseException {
    trace_call("ComandoFor");
    try {
      jj_consume_token(FOR);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(ATRIBUICAO);
      Expressao();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TO:
        jj_consume_token(TO);
        break;
      case DOWNTO:
        jj_consume_token(DOWNTO);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Expressao();
      jj_consume_token(DO);
      Comando();
    } finally {
      trace_return("ComandoFor");
    }
  }

  static final public void ComandoGoto() throws ParseException {
    trace_call("ComandoGoto");
    try {
      jj_consume_token(GOTO);
      jj_consume_token(ROTULO);
    } finally {
      trace_return("ComandoGoto");
    }
  }

  static final public void ComandoIf() throws ParseException {
    trace_call("ComandoIf");
    try {
      jj_consume_token(IF);
      Expressao();
      jj_consume_token(THEN);
      Comando();
      if (jj_2_2(2)) {
        jj_consume_token(ELSE);
        Comando();
      } else {
        ;
      }
    } finally {
      trace_return("ComandoIf");
    }
  }

  static final public void ComandoRepeat() throws ParseException {
    trace_call("ComandoRepeat");
    try {
      jj_consume_token(REPEAT);
      SequenciaComando();
      jj_consume_token(UNTIL);
      Expressao();
    } finally {
      trace_return("ComandoRepeat");
    }
  }

  static final public void ComandoRepetitivo() throws ParseException {
    trace_call("ComandoRepetitivo");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REPEAT:
        ComandoRepeat();
        break;
      case WHILE:
        ComandoWhile();
        break;
      case FOR:
        ComandoFor();
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ComandoRepetitivo");
    }
  }

  static final public void ComandoSimples() throws ParseException {
    trace_call("ComandoSimples");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 76:
        ComandoVazio();
        break;
      default:
        jj_la1[18] = jj_gen;
        if (jj_2_3(2)) {
          ComandoAtribuicao();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case GOTO:
            ComandoGoto();
            break;
          default:
            jj_la1[19] = jj_gen;
            if (jj_2_4(2)) {
              ChamadaProcedimento();
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    } finally {
      trace_return("ComandoSimples");
    }
  }

  static final public void ComandoVazio() throws ParseException {
    trace_call("ComandoVazio");
    try {
      jj_consume_token(76);
    } finally {
      trace_return("ComandoVazio");
    }
  }

  static final public void ComandoWhile() throws ParseException {
    trace_call("ComandoWhile");
    try {
      jj_consume_token(WHILE);
      Expressao();
      jj_consume_token(DO);
      Comando();
    } finally {
      trace_return("ComandoWhile");
    }
  }

  static final public void ComandoWith() throws ParseException {
    trace_call("ComandoWith");
    try {
      jj_consume_token(WITH);
      ListaVariavelRegistro();
      jj_consume_token(DO);
      Comando();
    } finally {
      trace_return("ComandoWith");
    }
  }

  static final public void Constante() throws ParseException {
    trace_call("Constante");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
      case MENOS:
      case NUMERO:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MAIS:
        case MENOS:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case MAIS:
            jj_consume_token(MAIS);
            break;
          case MENOS:
            jj_consume_token(MENOS);
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[21] = jj_gen;
          ;
        }
        jj_consume_token(NUMERO);
        break;
      case CARACTER:
        jj_consume_token(CARACTER);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("Constante");
    }
  }

  static final public void ConstanteSemSinal() throws ParseException {
    trace_call("ConstanteSemSinal");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMERO:
        jj_consume_token(NUMERO);
        break;
      case CARACTER:
        jj_consume_token(CARACTER);
        break;
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("ConstanteSemSinal");
    }
  }

  static final public void DeclaracaoFuncao() throws ParseException {
    trace_call("DeclaracaoFuncao");
    try {
      IdentificadorFuncao();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESE:
        ListaFormalParametro();
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      Bloco();
    } finally {
      trace_return("DeclaracaoFuncao");
    }
  }

  static final public void DeclaracaoProcedimento() throws ParseException {
    trace_call("DeclaracaoProcedimento");
    try {
      IdentificadorProcedimento();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESE:
        ListaFormalParametro();
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      Bloco();
    } finally {
      trace_return("DeclaracaoProcedimento");
    }
  }

  static final public void DeclaracaoRotulos() throws ParseException {
    trace_call("DeclaracaoRotulos");
    try {
      jj_consume_token(LABEL);
      jj_consume_token(ROTULO);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_4;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(ROTULO);
      }
      jj_consume_token(PONTO_VIRGULA);
    } finally {
      trace_return("DeclaracaoRotulos");
    }
  }

  static final public void DeclaracaoVariaveis() throws ParseException {
    trace_call("DeclaracaoVariaveis");
    try {
      jj_consume_token(VAR);
      label_5:
      while (true) {
        DeclaracaoVariavel();
        jj_consume_token(PONTO_VIRGULA);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_5;
        }
      }
    } finally {
      trace_return("DeclaracaoVariaveis");
    }
  }

  static final public void DeclaracaoVariavel() throws ParseException {
    trace_call("DeclaracaoVariavel");
    try {
      ListaIdentificador();
      jj_consume_token(DOIS_PONTOS);
      DenotadorTipo();
    } finally {
      trace_return("DeclaracaoVariavel");
    }
  }

  static final public void DefinicaoConstante() throws ParseException {
    trace_call("DefinicaoConstante");
    try {
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(IGUAL);
      Constante();
    } finally {
      trace_return("DefinicaoConstante");
    }
  }

  static final public void DefinicaoConstantes() throws ParseException {
    trace_call("DefinicaoConstantes");
    try {
      jj_consume_token(CONST);
      label_6:
      while (true) {
        DefinicaoConstante();
        jj_consume_token(PONTO_VIRGULA);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_6;
        }
      }
    } finally {
      trace_return("DefinicaoConstantes");
    }
  }

  static final public void DefinicaoTipo() throws ParseException {
    trace_call("DefinicaoTipo");
    try {
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(IGUAL);
      DenotadorTipo();
    } finally {
      trace_return("DefinicaoTipo");
    }
  }

  static final public void DefinicaoTipos() throws ParseException {
    trace_call("DefinicaoTipos");
    try {
      jj_consume_token(TYPE);
      label_7:
      while (true) {
        DefinicaoTipo();
        jj_consume_token(PONTO_VIRGULA);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[29] = jj_gen;
          break label_7;
        }
      }
    } finally {
      trace_return("DefinicaoTipos");
    }
  }

  static final public void DenotadorTipo() throws ParseException {
    trace_call("DenotadorTipo");
    try {
      if (jj_2_5(2)) {
        jj_consume_token(IDENTIFICADOR);
      } else if (jj_2_6(2)) {
        NovoTipo();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("DenotadorTipo");
    }
  }

  static final public void DesignadorFuncao() throws ParseException {
    trace_call("DesignadorFuncao");
    try {
      IdentificadorFuncao();
      if (jj_2_7(2)) {
        ListaParametro();
      } else {
        ;
      }
    } finally {
      trace_return("DesignadorFuncao");
    }
  }

  static final public void EspecificacaoParametroValor() throws ParseException {
    trace_call("EspecificacaoParametroValor");
    try {
      ListaIdentificador();
      jj_consume_token(DOIS_PONTOS);
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("EspecificacaoParametroValor");
    }
  }

  static final public void EspecificacaoParametroReferencia() throws ParseException {
    trace_call("EspecificacaoParametroReferencia");
    try {
      jj_consume_token(VAR);
      ListaIdentificador();
      jj_consume_token(DOIS_PONTOS);
      jj_consume_token(IDENTIFICADOR);
    } finally {
      trace_return("EspecificacaoParametroReferencia");
    }
  }

  static final public void EspecificacaoParametroFuncao() throws ParseException {
    trace_call("EspecificacaoParametroFuncao");
    try {
      CabecalhoFuncao();
    } finally {
      trace_return("EspecificacaoParametroFuncao");
    }
  }

  static final public void EspecificacaoParametroProcedimento() throws ParseException {
    trace_call("EspecificacaoParametroProcedimento");
    try {
      CabecalhoProcedimento();
    } finally {
      trace_return("EspecificacaoParametroProcedimento");
    }
  }

  static final public void Expressao() throws ParseException {
    trace_call("Expressao");
    try {
      ExpressaoSimples();
      if (jj_2_8(2)) {
        OperadorRelacional();
        ExpressaoSimples();
      } else {
        ;
      }
    } finally {
      trace_return("Expressao");
    }
  }

  static final public void ExpressaoSimples() throws ParseException {
    trace_call("ExpressaoSimples");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIS:
      case MENOS:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MAIS:
          jj_consume_token(MAIS);
          break;
        case MENOS:
          jj_consume_token(MENOS);
          break;
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[31] = jj_gen;
        ;
      }
      Termo();
      label_8:
      while (true) {
        if (jj_2_9(2)) {
          ;
        } else {
          break label_8;
        }
        OperadorAdicao();
        Termo();
      }
    } finally {
      trace_return("ExpressaoSimples");
    }
  }

  static final public void Fator() throws ParseException {
    trace_call("Fator");
    try {
      if (jj_2_10(2)) {
        AcessoVariavel();
      } else if (jj_2_11(2)) {
        ConstanteSemSinal();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABRE_PARENTESE:
          jj_consume_token(ABRE_PARENTESE);
          Expressao();
          jj_consume_token(FECHA_PARENTESE);
          break;
        case FUNCTION:
          DesignadorFuncao();
          break;
        default:
          jj_la1[32] = jj_gen;
